--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionString": {
-    "ResenasDataBaseConnection": "Server=tcp:resenasserver.database.windows.net,1433;Initial Catalog=AppResenasDataBase;Persist Security Info=False;User ID=appresenas;Password=Password1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ResenasDataBaseConnection": "Server=tcp:applibros.database.windows.net,1433;Initial Catalog=AppLibros;Persist Security Info=False;User ID=applibros;Password=Password1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     //"ID=MY_USER;password=MY_PASSWORD;\",": null,
     //"EscuelaDBConnection": "Server=.\\SQLExpress;Database=EscuelaDB;Trusted_Connection=True;",
 
